# eth-spec-lint

./: .gitignore  Dockerfile  LICENSE  README.md  action.yml  config.example.yml  entrypoint.sh  package.json  pyproject.toml  tsconfig.json  vercel.json
app/api/chat/: route.ts
eth_spec_lint/: __init__.py  cli.py  config.py
eth_spec_lint.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
eth_spec_lint/ci/: pr_filter.py
eth_spec_lint/client/: base.py  lodestar.py  mapping.py
eth_spec_lint/compare/: diff_types.py  engine.py  prompts.py
eth_spec_lint/parser/: fork_graph.py  models.py  spec_parser.py
eth_spec_lint/report/: json_report.py  markdown_report.py  sarif_report.py
prompts/: compare_constants.j2  compare_function.j2  compare_type.j2
tests/: test_client_analyzer.py  test_compare_engine.py  test_pr_filter.py  test_spec_parser.py
tests/fixtures/: sample_client.ts  sample_spec.md
website/: .gitignore  package.json
website/app/: globals.css  layout.tsx
website/app/api/chat/: route.ts
website/app/docs/: page.tsx
website/components/: Architecture.tsx  ChatWidget.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  QuickStart.tsx  TranslateBar.tsx
